resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app: lidarr
spec:
  type: ClusterIP
  ports:
    - port: 8686
      targetPort: lidarr
  selector:
    app: lidarr
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: lidarr
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app: postgres
